SERVER-11054 mergeChunks doesn't increment minor version correctly